# YNeurotrading

./: .gitignore  README.md  devpost.md  features.md
Agent-sim-module/: .gitignore
Agent-sim-module/agent/: ensemble.py  main.py  pipeline_db.py  requirements.txt  test_trade.py
Agent-sim-module/dashboard/: index.html  package-lock.json
Agent-sim-module/mirofish/: .env.example  docker-compose.yml
Agent-sim-module/mirofish_scenarios/: 1_prompt.txt  2_prompt.txt  2_seed.txt
Tribe-module/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  TRIBE_v2_Processing_Module.docx  pyproject.toml
Tribe-module/.claude/: settings.local.json
Tribe-module/docs/: 01-module-scope.md  02-tribe-forward-pass.md  04-statistics.md  06-composites.md  (+1 more)
YHack/Tribe-module/: pyproject.toml
YHack/Tribe-module/docs/: 03-roi-extraction.md  05-connectivity.md  08-setup.md
YHack/Tribe-module/scripts/: generate_weights.py  setup.sh  start.sh  validate_signatures.py
YHack/Tribe-module/src/tribe_neural/: api.py  constants.py
YHack/Tribe-module/src/tribe_neural/steps/: step1_tribe.py  step2_roi.py  step5_composites.py  step6_format.py
YHack/Tribe-module/tests/: test_api.py  test_pipeline.py  test_step3_stats.py  test_step5_composites.py  test_step6_format.py
agent/: api_models.py  config.py  logger.py  main.py  orchestrator.py  pipeline_db.py  requirements.txt  server.py  test_neural_post.py  test_run.py
dashboard/: index.html  package-lock.json  package.json  vite.config.js
mirofish/: .env.example  Dockerfile  ROADMAP.md  docker-compose.yml
mirofish_scenarios/: 1_seed.txt
(+99 files in other folders)
